# dating_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: bot.py  config.py  models.py  redis_client.py  states.py  tasks.py
app/db/: __init__.py  database.py  init.sql  init_db.py  models.py  session.py
app/handlers/: __init__.py  next.py  register.py  start.py
app/rabbit/: connection.py  consumer.py  producer.py
app/routes/: webhook.py
core/: redis.py
